--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
    <meta charset="ucf-8">
-   <title>Odin Link and Images</title> 
+   <img src="https://www.theodinproject.com/mstile-310x310.png" height="340" width="310"><title>Odin Link and Images</title> 
   </head>
   <body>
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
 
-    <a href="about.html">About</a>
+    <strong><a href="pages/about.html">About</a></strong>
   </body>
 
 </html>
